scheduler: Don't throttle 0x0 frames

This patch avoids throttling requestAnimationFrame and timers inside 0x0
frames. The reason is that some websites (e.g., GMail) use cross origin
0x0 frames to drive UI logic and throttling these frames causes
breakage. This change also makes us match Safari's behavior.

This patch also removes the test for throttling out-of-process iframes,
because it turns out the viewport intersection code is not able to
compute intersections across process boundaries. This capability will be
restored when IntersectionObserver gains support for out-of-process
iframes.

BUG=644217

Review-Url: https://codereview.chromium.org/2333653002
Cr-Commit-Position: refs/heads/master@{#418174}

Former-commit-id: b83d755a52a7fe9792af9ee360e551c157ad576e